--- a/CalculatorWpf/CalculatorWpf.csproj
+++ b/CalculatorWpf/CalculatorWpf.csproj
@@ -140,6 +140,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Converters\RoutedEventArgsToStringConverter.cs" />
     <Compile Include="Tools\ViewModelLocator.cs" />
     <Compile Include="ViewModels\AppViewModel.cs" />
     <Compile Include="ViewModels\StandardCalcViewModel.cs" />
